<resources>
    <string name="app_name">Hotel California</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="login">Login</string>
    <string name="ingresar">Ingresar</string>
    <string name="regitro">Registrate</string>
    <string name="hoteln">Hotel California</string>
    <string name="reservar">Reservar</string>
    <string name="fechaI">Fecha de ingreso:</string>
    <string name="fechaE">fecha de salida:</string>
    <string name="fechaEjemplo1">00/00/2023</string>
    <string name="fechaEjemplo2">01/00/2023</string>
    <string name="compra">Compra</string>
    <string name="perfil">Usuario</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="menu">Inicio</string>
    <string name="home">home</string>
    <string name="pagar">Pagar +</string>
    <string name="pagada">Pagada</string>
    <string name="precio1">$75.500</string>
    <string name="precio2">$98.000</string>
    <string name="precio3">$34.500</string>
    <string name="reservas">Reservas</string>
    <string name="pesos">Pesos</string>
    <string name="pagado">Pagado</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="boton_atras">Ir hacia atrás</string>
    <string name="general">General</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="cont_ctanos">Contáctanos</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="recibir_notificaciones">Recibir notificaciones</string>
    <string name="HabitacionSD">Habitación Single</string>
    <string name="fechaFicticia">18/01/2022</string>
    <string name="fechaF2">25/02/2022</string>

    <string name="edicio_perfil">Editar mi perfil</string>
    <string name="nuevo_usuario">Nuevo usuario</string>
    <string name="nuevo_email">Nuevo email</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="juan_perez">juan perez</string>
    <string name="mail_hint">juanperez89@gmail.com</string>
    <string name="password_hint">*********</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="notifications">Notificaciones</string>
    <string name="mensaje_ok">Su reserva ha sido realizada con exito</string>
    <string name="mensaje_reintente">Por favor reintente nuevamente..</string>
    <string name="envianos">Envianos</string>
    <string name="texto_contacto">Detalla aquí tu consulta/sugerencia</string>
    <string name="tu_mensaje">tu mensaje!</string>
    <string name="enviar">Enviar</string>
    <string name="contrasena">Contraseña</string>
    <string name="visita">¡Visita nuestra página web!</string>

    <string name="singleRoom">Habitación Single/Doble</string>
    <string name="triple">Habitación Triple</string>
    <string name="suite">Suite Exclusiva</string>
    <string name="suiteJunior">Suite Junior Doble</string>
    <string name="ingreso">Ingreso</string>
    <string name="salida">Salida</string>

    <string name="btnR">botón para reservar habitación</string>
    <string name="btnIngr">botón para ingresar fecha de Ingreso</string>
    <string name="btnSali">botón para ingresar fecha de salida</string>
    <string name="btnPag">botón para pagar la reserva</string>
    <string name="btnMod">botón para modificar la reserva</string>
    <string name="btnEli">botón para eliminar la reserva</string>
    <string name="volverH">botón para volver a atrás</string>
    <string name="boton_prev_reserva">Botón para visualizar una reserva más nueva</string>
    <string name="boton_next_reserva">Botón para visualizar una reserva anterior</string>
    <string name="ingres_tus_datos_o_logueate">Ingresá tus datos o logueate</string>
    <string name="usuario_sin_reservas">El usuario no tiene reservas.</string>
    <string name="imagen_de_notifiaciones_realizada">imagen de notifiaciones realizada</string>
    <string name="reserva_realizada_con_xito">Reserva realizada con éxito!</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu nueva contraseña</string>
    <string name="gracias">Esperamos que haya tenido una excelente estadía.</string>
    <string name="reserva_anulada">La reserva ha sido anulada por falta de pago. Genere otra reserva.</string>
    <string name="empty">\"\"</string>
    <string name="mje_error_completar_fechas_reserva">* Debe completar la Fecha de Ingreso y Salida</string>
    <string name="mje_error_select_hab_reserva">* Debe seleccionar una habitación para Reservar</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="HabitacionCuadruple">Habitación Cuadruple</string>
    <string name="HabitacionDoble">Habitación Doble</string>
    <string name="name">Juan Perez</string>
    <string name="subject">Asunto</string>
    <string name="mje_error_fecha_ya_reservada">* La habitación ya está reservada para esa fecha.</string>
    <string name="reserv_ahora">Reservá ahora!</string>
    <string name="habitacion_imagen">Imagen de la habitación</string>

</resources>