<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edition">

    <TextView
        android:id="@+id/textErrorEditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/rojo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/edicio_perfil"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="63dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/boton_atras"
        android:onClick="editProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:text="@string/nuevo_usuario"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="208dp"
        android:text="@string/nuevo_email"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="30sp"
        android:text="@string/nueva_contrasena"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editarEmail" />

    <EditText
        android:id="@+id/editarUsuario"
        android:layout_width="330dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/juan_perez"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/juan_perez"
        android:inputType="text"
        android:textColorHint="@color/azul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editarEmail"
        android:layout_width="320dp"
        android:layout_height="67dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/mail_hint"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/mail_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/azul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editarPassword"
        android:layout_width="244dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="15sp"
        android:autofillHints="@string/password_hint"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/ingresa_tu_contrase_a"
        android:inputType="textPassword"
        android:textColorHint="@color/azul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/buttonEditarPerfil"
        android:layout_width="292dp"
        android:layout_height="54dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/naranja"
        android:fontFamily="sans-serif-condensed"
        android:onClick="editProfile"
        android:text="@string/guardar_cambios"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editarPassword" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:layout_marginTop="2dp"
        app:backgroundTint="@color/gris"
        app:itemIconTint="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu='@menu/bottom_nav_menu' />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="66dp"
        android:contentDescription="@string/password_hint"
        app:layout_constraintStart_toEndOf="@+id/editarPassword"
        app:layout_constraintTop_toBottomOf="@+id/editarEmail"
        app:srcCompat="@android:drawable/ic_menu_view" />


</androidx.constraintlayout.widget.ConstraintLayout>