<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <TextView
        android:id="@+id/reservasT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mi_perfil"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="63dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/boton_atras"
        android:onClick="goToHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="27dp"
        android:text="@string/general"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <Button
        android:id="@+id/buttonPagar"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/azul"
        android:onClick="goToEdition"
        android:text="@string/editar_perfil"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/azul"
        android:onClick="onEliminarCuenta"
        android:text="@string/eliminar_cuenta"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPagar" />

    <Button
        android:id="@+id/button4"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/azul"
        android:onClick="goToContact"
        android:text="@string/cont_ctanos"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchNotificaciones"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <Button
        android:id="@+id/button5"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/azul"
        android:onClick="onLogout"
        android:text="@string/cerrar_sesion"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Switch
        android:id="@+id/switchNotificaciones"
        android:layout_width="320dp"
        android:layout_height="76dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/azul"
        android:text="@string/recibir_notificaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:text="@string/notificaciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:layout_marginTop="2dp"
        app:backgroundTint="@color/gris"
        app:itemIconTint="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu='@menu/bottom_nav_menu' />

    <TextView
        android:id="@+id/holaUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pagWeb"
        android:layout_width="69dp"
        android:layout_height="74dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="19dp"
        android:background="@color/white"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:foregroundGravity="center"
        android:onClick="goToWeb"
        app:backgroundTint="@color/white"
        app:fabCustomSize="70dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:maxImageSize="55dp"
        app:srcCompat="@drawable/logohc" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="7dp"
        android:text="@string/visita"
        app:layout_constraintBottom_toTopOf="@+id/pagWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

</androidx.constraintlayout.widget.ConstraintLayout>