<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="131dp"
            android:layout_height="123dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_launcherlogo_foreground" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/bienvenido"
            android:textSize="30sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="339dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/azul"
            app:cardCornerRadius="18dp">

            <TextView
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="TextSizeCheck" />

            <androidx.cardview.widget.CardView
                android:layout_width="303dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="18dp">

                <EditText
                    android:id="@+id/emailLogin"
                    android:layout_width="289dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/mail_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gris"
                    android:textColorLink="@color/clear"
                    tools:ignore="TextContrastCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="303dp"
                android:layout_height="55dp"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="35dp"
                android:backgroundTint="@color/white"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="18dp">

                <EditText
                    android:id="@+id/passwordLogin"
                    android:layout_width="289dp"
                    android:layout_height="55dp"
                    android:layout_gravity="bottom|center"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gris"
                    android:textColorLink="@color/clear"
                    tools:ignore="TextContrastCheck" />
            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textErrorLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/rojo"
            android:textSize="16sp" />

        <Button
            android:id="@+id/inicio"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/naranja"
            android:gravity="center"
            android:onClick="@string/home"
            android:text="@string/ingresar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorLink="@color/clear"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="271dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:onClick="iraregistro"
            android:text="@string/regitro"
            android:textSize="15sp" />



    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabWhatsApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/verde_whatsapp"
        android:contentDescription="@string/whatsapp"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/wpp" />

</RelativeLayout>